--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -83,6 +83,7 @@
 
 @media screen and (min-width: 900px) {
   .footer {
+    padding-top: 76px;
     padding-left: 70px;
     padding-right: 70px;
   }
