--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -19,8 +19,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
+  padding-top: 130px;
+  padding-bottom: 42px;
+  row-gap: 150px;
+}
+
+.navigation_active a {
+  font-size: 18px;
 }
 
 .navigation__menu {
@@ -29,7 +36,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 25px;
 }
 
 .navigation__link {
@@ -53,6 +61,7 @@
   position: absolute;
   right: 14px;
   top: 14px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
@@ -60,11 +69,14 @@
   .navigation_active {
     width: auto;
     min-width: 520px;
+    padding-top: 159px;
+    padding-bottom: 90px;
   }
 
   .navigation__menu {
     align-items: center;
     column-gap: 16px;
+    row-gap: 31px;
     margin: 0;
     padding: 0;
   }
@@ -80,11 +92,11 @@
     top: 23px;
   }
 
-  .navigation__close:hover{
+  .navigation__close:hover {
     opacity: .8;
   }
 
-  .navigation__button:hover{
+  .navigation__button:hover {
     opacity: .8;
   }
 }
@@ -111,6 +123,7 @@
   .navigation__link {
     padding-bottom: 0;
   }
+
   .navigation__menu li:first-child {
     display: none;
   }
