--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -9,7 +9,7 @@
   top: 0;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   row-gap: 10px;
   background-color: #202020;
 }
@@ -18,7 +18,6 @@
   margin: 0;
   font-size: 80px;
   font-weight: 400;
-  padding-top: 17%;
 }
 
 .not-found__text {
@@ -30,7 +29,7 @@
 .not-found__back-btn {
   border: none;
   background-color: transparent;
-  margin-top: 284px;
+  margin-top: 274px;
   margin-bottom: 30px;
   color: #4285F4;
   font-size: 12px;
@@ -45,11 +44,12 @@
 @media screen and (min-width: 600px) {
   .not-found {
     row-gap: 5px;
+    justify-content: center;
   }
 
   .not-found__title {
     font-size: 140px;
-    padding-top: 17%;
+    padding-top: 28%;
   }
 
   .not-found__text {
@@ -61,3 +61,10 @@
     margin-top: 184px;
   }
 }
+
+@media screen and (min-width: 900px) {
+  .not-found__title {
+    padding-top: 17%;
+  }
+}
+
