--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -19,8 +19,6 @@
 
 .portfolio__cell {
   border-bottom: 1px solid #E6E6E6;
-  display: flex;
-  justify-content: space-between;
   min-height: 47px;
   margin-bottom: 20px;
 }
@@ -31,6 +29,9 @@
 }
 
 .portfolio__link {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
   text-decoration: none;
   color: #fff;
   font-size: 18px;
@@ -39,14 +40,14 @@
   letter-spacing: -.72px;
 }
 
-.portfolio__link:hover{
+.portfolio__link:hover {
   opacity: .7;
 }
 
 .portfolio__arrow {
-  width: 12px;
-  height: 26px;
-  margin-right: 3px;
+  width: 10px;
+  height: 10px;
+  margin-right: 4px;
 }
 
 @media screen and (min-width: 600px) {
@@ -73,11 +74,11 @@
     line-height: 50px;
     letter-spacing: -1.12px;
   }
+
   .portfolio__arrow {
-    width: 18px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    height: 50px;
+    width: 20px;
+    height: 18px;
+    margin-right: 4px;
   }
 
 }
