--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,8 @@
 .profile {
   font-family: 'Inter', 'Arial', sans-serif;
-  padding: 74px 10px 40px 10px;
+  padding: 71px 10px 40px 10px;
   min-height: calc(100vh - 74px);
+  max-height: 706px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -30,13 +31,11 @@
   flex-direction: column;
   row-gap: 16px;
   align-items: center;
-  justify-content: space-between;
 }
 
 .profile__input {
   font-size: 11px;
   font-weight: 400;
-  min-height: 33px;
   background-color: transparent;
   border: none;
   color: #fff;
@@ -54,6 +53,7 @@
 
 .profile__input-name {
   color: #fff;
+  min-height: 40px;
   font-size: 11px;
   font-weight: 500;
   display: flex;
@@ -112,8 +112,7 @@
   text-align: center;
   font-size: 11px;
   font-weight: 400;
-  min-height: 10px;
-
+  min-height: 8px;
 }
 
 @media screen and (min-width:600px) {
@@ -140,12 +139,15 @@
 
 @media screen and (min-width:900px) {
   .profile{
-    padding-top: 74px;
+    padding-top: 75px;
   }
   .profile__form{
-  padding-top: 115px;
+  padding-top: 112px;
 }
 .profile__input-field{
   margin-bottom: 182px;
+}
+.profile__input-name{
+  padding-top: 0;
 }
 }
