--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -8,7 +8,7 @@
 
 .tech__title {
   margin: 0;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #dadada;
   font-size: 18px;
   font-weight: 400;
   letter-spacing: -.72px;
