feat:добавить функционал компонентов регистрации,логина,профиля.

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -11,10 +11,6 @@
   margin: 0 auto;
 }
 
-.card:hover>.card__btn {
-  display: block;
-}
-
 .card__image {
   aspect-ratio: 1 / 1;
   height: 100%;
@@ -62,7 +58,6 @@
   min-height: 21px;
   background-repeat: no-repeat;
   cursor: pointer;
-  display: none;
 }
 
 .card__btn:hover {
@@ -75,7 +70,6 @@
 
 .card__btn_saved {
   background-image: url(../../images/logo/incollection.svg);
-  display: block;
 }
 
 .card__btn_save {
@@ -108,7 +102,15 @@
   .card__btn {
     top: 16px;
     right: 14px;
-    ;
+    display: none;
+  }
+
+  .card:hover>.card__btn {
+    display: block;
+  }
+
+  .card__btn_saved {
+    display: block;
   }
 
 }
