--- a/src/components/FormContainer/FormContainer.css
+++ b/src/components/FormContainer/FormContainer.css
@@ -77,7 +77,13 @@
   grid-column: 1 / 3;
 }
 
+.form-container__error_api {
+  margin-top: 117px;
+  text-align: center;
+}
+
 .form-container__input {
+  outline: none;
   border: none;
   box-sizing: border-box;
   width: 100%;
@@ -91,10 +97,6 @@
   padding: 0 15px 0 15px;
 }
 
-.form-container__input_type_error {
-  color: #EE3465;
-}
-
 .form-container__button {
   color: #fff;
   border: none;
@@ -106,7 +108,12 @@
   min-width: 260px;
   padding: 0;
   margin-bottom: 14px;
-  margin-top: 157px;
+  margin-top: 20px;
+}
+
+.form-container__button_disabled {
+  background-color: #f4f4f4;
+  color: #c2c2c2;
 }
 
 .form-container__button:hover {
@@ -116,10 +123,31 @@
 
 @media screen and (min-width:600px) {
 
-  .form-container__button {
-    font-size: 14px;
-    margin-bottom: 16px;
-    margin-top: 157px;
+  .form-container {
+    padding-top: 30px;
+    justify-content: center;
+  }
+
+  .form-container__logo {
+    margin: 0;
+  }
+
+  .form-container__error {
+    font-size: 11px;
+  }
+
+  .form-container__title {
+    text-align: initial;
+    margin-top: 40px;
+  }
+
+  .form-container__input-field {
+    margin-top: 42px;
+  }
+
+  .form-container__error_api {
+    margin-top: 28px;
+    font-size: 11px;
   }
 
   .form-container__text {
@@ -130,36 +158,12 @@
     font-size: 14px;
   }
 
-  .form-container__logo {
-    margin: 0;
-  }
-
-  .form-container__title {
-    text-align:initial;
-  }
-
 }
-@media screen and (min-width:600px) {
-  .form-container {
-    padding-top: 30px;
-    justify-content: center;
-  }
 
-  .form-container__title {
-    margin-top: 40px;
-  }
-  .form-container__input-field{
-    margin-top: 42px;
-  }
-
-  .form-container__button {
-    margin-top: 68px;
-  }
-
-}
 @media screen and (min-width:900px) {
 
-.form-container__button {
-  margin-top: 69px;
-}
+  .form-container__error_api {
+    margin-top: 29px;
+    font-size: 12px;
+  }
 }
