fix:постер фильма являетя ссылкой на трейлер

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,6 +20,12 @@
   grid-column: 1 / 3;
 }
 
+.card__trailer-link {
+  height: 100%;
+  width: 100%;
+  grid-column: 1 / 3;
+}
+
 .card__name {
   color: #fff;
   margin: 0;
